# house-stab-sampler

./: .gitignore  CMakeLists.txt  README.md  create_pkg.sh  notarize.sh
installer/: installer.iss
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  debug
source/ui/public/: index.html
source/ui/public/css/: styles.css
source/ui/public/js/: index.js
